# openenv-hackathon

./: .gitignore  Dockerfile  README.md  RESUME.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  plan.md  pyproject.toml  test_full.py
server/: __init__.py  app.py  environment.py  incident_response_env_environment.py  requirements.txt
server/scenarios/: __init__.py  generator.py  task_easy.py  task_hard.py  task_medium.py
