[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-incident-response-env"
version = "1.0.0"
description = "Incident Response Triage environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "faker>=24.0.0",
    "python-dotenv>=1.0.1",
    "openai>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "incident_response_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "incident_response_env",
    "incident_response_env.server",
    "incident_response_env.server.scenarios",
]
[tool.setuptools.package-dir]
"incident_response_env" = "."
"incident_response_env.server" = "server"
"incident_response_env.server.scenarios" = "server/scenarios"
